@@ -48,16 +48,14 @@ my $desc = {
               font => 'boldText',
               height => 12,
               padding_side   => 0,
+              _default => 'Field', # override default_field_type
             },
-    { _class => 'Field',
-      width  => 200,
+    { width  => 200,
       align  => 'left',
       value  => \'AIRPLANE COMPONENT FIXING INC.' },
-    { _class => 'Field',
-      width  => 351,
+    { width  => 351,
       value  => \'WORK ORDER' },
-    { _class => 'Field',
-      width  => 200,
+    { width  => 200,
       align  => 'right',
       value  => \'F.A.A REPAIR STATION NO. L3PF428Q' },
   ],
@@ -190,63 +188,53 @@ my $desc = {
         height => 14,
         font => 'bottomRow',
         padding_side => 0,
+        _default => 'Field',
       },
       # This HBox exists just to set parameters on its children:
       [ HBox => { border => 0, font  => 'pageNum' },
-        { _class => 'Field',
-          value => \'42410-1',
+        { value => \'42410-1',
           width => 57 },
         { _class => 'Spacer',
           width  => 14 },
-        { _class => 'Field',
-          align => 'left',
+        { align => 'left',
           value => { _class => 'Page', value => 'Page(s): %n OF %t' },
           width => 377 },
       ],
       # This HBox exists just to set parameters on its children:
       [ HBox => { border => 0, padding_bottom => 6, padding_side => 2 },
-        { _class => 'Field',
-          align => 'right',
+        { align => 'right',
           value => \'ML',
           width => 10 },
-        { _class => 'Field',
-          align => 'right',
+        { align => 'right',
           value => \'FXN-',
           width => 53 },
-        { _class => 'Field',
-          align => 'left',
+        { align => 'left',
           value => 'FXN',
           width => 28 },
-        { _class => 'Field',
-          align => 'right',
+        { align => 'right',
           value => \'AP',
           width => 17 },
         { _class => 'Checkbox',
           value => 'AP',
           padding_bottom => 3,
           width => 20 },
-        { _class => 'Field',
-          align => 'right',
+        { align => 'right',
           value => \'BP',
           width => 20 },
         { _class => 'Checkbox',
           value => 'BP',
           padding_bottom => 3,
           width => 20 },
-        { _class => 'Field',
-          align => 'right',
+        { align => 'right',
           value => \'Photo',
           width => 45 },
-        { _class => 'Field',
-          align => 'left',
+        { align => 'left',
           value => 'photo',
           width => 28 },
-        { _class => 'Field',
-          align => 'right',
+        { align => 'right',
           value => \'QTY',
           width => 35 },
-        { _class => 'Field',
-          align => 'left',
+        { align => 'left',
           value => 'qty',
           width => 27 },
       ],
